--- a/login.css
+++ b/login.css
@@ -8,39 +8,39 @@
 .login-box{
  /* height: 500px;
   width: 300px;*/
-  height: 800px;
+  height: 100vh;
   width: 100vw;
   background-image: url("bg.jpg");
   background-size: cover;
   background-position: center;
-  border: 4px;
-  /*border-radius: 25px;
-  position: relative;
+  border-radius: 25px;
+  
 /*  top: 100px;*/
 /*  left: 60px;*/
 }
 
-h1{
-  color: white;
-  text-align: left;
-  margin: 100px 0px 60px 100px;
-}
-
-
-
-
-form{
+ form{
   height: 100%;
   width: 100%;
-  color: white;
-  text-align : center;
-  display: block;
   backdrop-filter: brightness(25%);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   border-radius: 25px;
 }
+
+h2{
+  color: white;
+  text-align: left;
+  margin: 100px 0px 0px 100px;
+}
+
+.h2class{
+  color:rgb(255,255,255,0.5);
+  text-align: left;
+  margin: 5px 0px 0px 100px;
+  font-size: 0.4rem;
+}
+
 
 input{
   background-color: rgb(255,255,255,0.35);
@@ -51,9 +51,22 @@ input{
   margin-left: 100px;
   width: 200px;
   color: white;
-/*  padding: 0px 35px 0px 35px;*/
-  
+
 }
+
+.passwordbottom{
+  color:rgb(255,255,255,0.7);
+  text-align: left;
+  margin: 10px 0px 0px 100px;
+  font-size: 0.4rem;
+}
+
+.passwordbottom a {
+  margin-left: 40px;
+  text-decoration-line: none;
+}
+
+
 label{
   display: block;
   color: white;
@@ -61,7 +74,7 @@ label{
   text-align: left;
   font-size: 0.6rem;
   letter-spacing: 3.5px;
-  margin: 25px 0px 20px 100px
+  margin: 25px 0px 10px 100px
   
 }
 
@@ -90,7 +103,15 @@ button a {
   color: white;
 }
 
-form p {
+.bottonbottom {
   font-size: 0.4rem;
+  text-align: left;
+  margin-left: 100px;
+  color: rgb(255, 255,255,0.7);
+}
+
+.bottonbottom a {
+  font-size: 0.4rem;
+  text-decoration: none;
   
 }
